[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semanticdiff"
version = "0.1.0"
description = "PDF semantic diff with highlights + LLM report."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="SemanticDiff"}]
dependencies = [
  "PyMuPDF>=1.23.0",
  "openai>=1.40.0",
  "pydantic>=2.6.0",
  "PyYAML>=6.0.1",
  "reportlab>=4.0.8",
]

[project.scripts]
semanticdiff = "semanticdiff.cli:main"


[tool.setuptools]
packages = { find = { include = ["semanticdiff*"], exclude = ["comparison_output*", "tests*", "docs*"] } }
